--- a/Pages/Admin/UserSubscriptions.razor
+++ b/Pages/Admin/UserSubscriptions.razor
@@ -56,4 +56,15 @@
             };
         DialogService.Show<AddUserSubDialog>("Add User Subscription");
     }
+
+    private void EditSub(int id)
+    {
+        // var options = new DialogOptions()
+        //     {
+        //         CloseButton = true,
+        //         MaxWidth = MaxWidth.ExtraExtraLarge,
+        //         Position = DialogPosition.Center,
+        //     };
+        // DialogService.Show<EditUserSubDialog>("Edit User Subscription", new DialogParameters { { "Id", id } });
+    }
 }
