--- a/Pages/Admin/AdminLayout.razor
+++ b/Pages/Admin/AdminLayout.razor
@@ -18,7 +18,18 @@
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
         <MudNavMenu Bordered="true">
-            <AuthorizeView Roles="administrator, manager, contributor">
+
+            <MudNavLink Href="/admin/courses" Icon="@Icons.Material.Filled.Book">Courses</MudNavLink>
+            <MudNavLink Href="/admin/topics" Icon="@Icons.Material.Filled.LibraryBooks">Topics</MudNavLink>
+            <MudNavLink Href="/admin/notes" Icon="@Icons.Material.Filled.Note">Notes</MudNavLink>
+            <MudNavLink Href="/admin/Questions" Icon="@Icons.Material.Filled.QuestionAnswer">Questions</MudNavLink>
+            <MudNavLink Href="/admin/corrections" Icon="@Icons.Material.Filled.QuestionMark">Corrections</MudNavLink>
+            <MudNavLink Href="/admin/Articles" Icon="@Icons.Material.Filled.Newspaper">Articles</MudNavLink>
+            <MudNavLink Href="/admin/roles" Icon="@Icons.Material.Filled.LocalParking">Roles</MudNavLink>
+            <MudNavLink Href="/admin/subscriptions" Icon="@Icons.Material.Filled.Subscriptions">Subscriptions</MudNavLink>
+            <MudNavLink Href="/admin/usersubscriptions" Icon="@Icons.Material.Filled.SupervisedUserCircle">User Subscriptions</MudNavLink>
+
+            @* <AuthorizeView Roles="">
                 <MudNavLink Href="/admin/courses" Icon="@Icons.Material.Filled.Book">Courses</MudNavLink>
                 <MudNavLink Href="/admin/topics" Icon="@Icons.Material.Filled.LibraryBooks">Topics</MudNavLink>
                 <MudNavLink Href="/admin/notes" Icon="@Icons.Material.Filled.Note">Notes</MudNavLink>
@@ -26,23 +37,21 @@
                 <MudNavLink Href="/admin/corrections" Icon="@Icons.Material.Filled.QuestionMark">Corrections</MudNavLink>
                 <MudNavLink Href="/admin/Articles" Icon="@Icons.Material.Filled.Newspaper">Articles</MudNavLink>
             </AuthorizeView>
-            <AuthorizeView Roles="administrator">
+            <AuthorizeView Roles="">
                 <MudNavLink Href="/admin/roles" Icon="@Icons.Material.Filled.LocalParking">Roles</MudNavLink>
             </AuthorizeView>
-            <AuthorizeView Roles="administrator, manager">
+            <AuthorizeView Roles="">
                 <MudNavLink Href="/admin/subscriptions" Icon="@Icons.Material.Filled.Subscriptions">Subscriptions</MudNavLink>
             </AuthorizeView>
-            <AuthorizeView Roles="administrator, manager, seller">
+            <AuthorizeView Roles="">
                 <MudNavLink Href="/admin/usersubscriptions" Icon="@Icons.Material.Filled.SupervisedUserCircle">User Subscriptions</MudNavLink>
-            </AuthorizeView>
+            </AuthorizeView> *@
             <MudNavLink Href="/home" Icon="@Icons.Material.Filled.ArrowUpward">Go To Medbase</MudNavLink>
         </MudNavMenu>
     </MudDrawer>
     <MudMainContent>
         <MudContainer>
-            <AuthorizeView Roles="administrator">
                 @Body
-            </AuthorizeView>
         </MudContainer>
     </MudMainContent>
 </MudLayout>
