--- a/Pages/User/Index.razor
+++ b/Pages/User/Index.razor
@@ -33,6 +33,9 @@
 
 <header>
     <div class="container my-5">
+        <MudAlert Severity="Severity.Info" Class="mb-1">
+            Join the <MudLink Href="https://whatsapp.com/channel/0029VabQu1o7dmeTtvWXta0V" Typo="Typo.body1">Medbase WhatsApp Channel</MudLink> to get notified of changes and updates to Medbase.
+        </MudAlert>
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
             <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
                 <MudImage Src="img/medbase_transparent.png" Style="max-height:80px" />
