--- a/Pages/App.razor
+++ b/Pages/App.razor
@@ -1,24 +1,20 @@
-﻿@page "/"
-@using Microsoft.AspNetCore.Components.Web
-@namespace MedbaseBlazor.Pages
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" data-bs-theme="light">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="~/" />
+    <base href="/" />
     <link href="MedbaseBlazor.styles.css" rel="stylesheet" />
 
     <link href="_content/MedbaseComponents/wwwroot/css/mdstyles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="~/css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="_content/MedbaseComponents/wwwroot/css/common.css" />
+
+    <HeadOutlet @rendermode="@RenderMode.InteractiveServer" />
     <link href="css/site.css" rel="stylesheet" />
 
     <!--WhatsApp Metas-->
     <meta property="og:site_name" content="Medbase">
-    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -61,15 +57,10 @@
 
 </head>
 <body>
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
+    <Routes @rendermode="@RenderMode.InteractiveServer" />
 
     <div id="blazor-error-ui">
-        <environment include="Staging,Production">
-            An error has occurred. This application may no longer respond until reloaded.
-        </environment>
-        <environment include="Development">
-            An unhandled exception has occurred. See browser dev tools for details.
-        </environment>
+        An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
@@ -80,7 +71,7 @@
     <script src="/_content/PSC.Blazor.Components.MarkdownEditor/js/markdownEditor.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_content/MudBlazor.Markdown/MudBlazor.Markdown.min.js"></script>
-    <script src="_framework/blazor.server.js"></script>
+    <script src="_framework/blazor.web.js"></script>
     <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
 </body>
 </html>
