--- a/Routes.razor
+++ b/Routes.razor
@@ -2,7 +2,7 @@
 @using MedbaseComponents.Pages
 @using MedbaseComponents.Controls
 <CascadingAuthenticationState>
-    <Router AppAssembly="@typeof(App).Assembly"
+    <Router AppAssembly="@typeof(Routes).Assembly"
         AdditionalAssemblies="new[]{typeof(MedbaseComponents.Pages.User.Questions).Assembly, 
     typeof(MedbaseComponents.Pages.User.Topics).Assembly, 
     typeof(MedbaseComponents.Pages.User.Notes).Assembly, 
@@ -11,8 +11,5 @@
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(SharedLayout)" />
             <FocusOnNavigate RouteData="@routeData" Selector="h1" />
         </Found>
-        <NotFound>
-            <NotFoundComponent />
-        </NotFound>
     </Router>
 </CascadingAuthenticationState>
