--- a/_Imports.razor
+++ b/_Imports.razor
@@ -18,3 +18,4 @@
 @using MedbaseComponents.Pages
 @using PSC.Blazor.Components.MarkdownEditor
 @using PSC.Blazor.Components.MarkdownEditor.EventsArgs
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
