--- a/Pages/Admin/Editors/TopicEditor.razor
+++ b/Pages/Admin/Editors/TopicEditor.razor
@@ -2,6 +2,8 @@
 @page "/admin/topics/add"
 @layout AdminLayout
 @inject IApiRepository repository
+@inject ISnackbar Snackbar
+@inject NavigationManager navManager
 
 
 <EditForm Model="Topic" OnValidSubmit="SaveChanges">
@@ -14,7 +16,7 @@
     </MudSelect>
     <MudNumericField Label="Topic Reference"For="@(() => Topic.TopicRef)" @bind-Value="Topic.TopicRef" />
     <MudTextField Label="Name" @bind-Value="Topic.Name" For="@(() => Topic.Name)" />
-    <button class="btn btn-primary" type="submit">Done</button>
+    <MudButton Color="Color.Primary" Variant="Variant.Filled" ButtonType="ButtonType.Submit">Submit Question</MudButton>
 </EditForm>
 
 
@@ -24,6 +26,7 @@
     public int id { get; set; } = 0;
     private IEnumerable<Course> Courses { get; set; } = Enumerable.Empty<Course>();
     private IEnumerable<Topic> Topics { get; set; }
+    private Snackbar snackbar;
 
     protected async override Task OnInitializedAsync()
     {
@@ -31,7 +34,7 @@
         Topics = await repository.GetAllTopics();
         Topic.TopicRef = Topics.Last().TopicRef + 1;
     }
-        
+
     [Inject]
     public NavigationManager NavManager { get; set; }
 
@@ -42,16 +45,33 @@
             Topic = await repository.GetTopic(id) ?? new();
         }
     }
-    private void SaveChanges()
+    private async Task SaveChanges()
     {
-        if (id == 0)
+        try
         {
-            repository.PostTopic(Topic);
+            if (id == 0)
+            {
+                repository.PostTopic(Topic);
+            }
+            else
+            {
+                if (await repository.UpdateTopic(Topic))
+                {
+                    snackbar = Snackbar.Add("Topic updated successfully!", Severity.Success);
+                }
+                else
+                {
+                    snackbar = Snackbar.Add("Failed to update question. Please try again.", Severity.Warning);
+                }
+            }            
         }
-        else
+        catch (Exception ex)
         {
-            repository.UpdateTopic(id, Topic);
+            snackbar = Snackbar.Add($"An error occurred: {ex.Message}", Severity.Error);
         }
-        NavManager.NavigateTo("/admin/topics");
+        finally
+        {
+            navManager.NavigateTo("/admin/topics");
+        }
     }
 }
