House keeping done before v3 upgrades

--- a/Pages/Admin/Questions.razor
+++ b/Pages/Admin/Questions.razor
@@ -79,7 +79,7 @@ else
         </PagerContent>
     </MudTable>
     <div class="d-flex flex-wrap mt-4">
-        <MudSwitch @bind-Checked="@striped" Color="Color.Tertiary">Striped</MudSwitch>
+        <MudSwitch @bind-Value="@striped" Color="Color.Tertiary">Striped</MudSwitch>
         <MudSpacer />
     </div>
     <MudFab StartIcon="@Icons.Material.Filled.Add" Color="Color.Primary" Href="/admin/question/add" style="margin-bottom:75px;" Label="Add Question" class="m-2 me-5 position-fixed bottom-0 end-0 justify-content-center" />
