commit before trying auth0

--- a/Pages/User/About.razor
+++ b/Pages/User/About.razor
@@ -64,7 +64,7 @@
                 <div class="h5 mb-2">Chat with me</div>
                 <p class="mb-0">
                     If WhatsApp is your preferred channel of communication,
-                    <MudLink href="@Constants.LinkToWhatsApp">
+                    <MudLink href="@MedbaseLibrary.Helpers.Constants.LinkToWhatsApp">
                         have at it.
                     </MudLink>
                 </p>
@@ -74,7 +74,7 @@
                 <div class="h5">Send me an email</div>
                 <p class="mb-0">
                     Get in touch at
-                    <MudLink href="@Constants.LinkToMyEmail">
+                    <MudLink href="@MedbaseLibrary.Helpers.Constants.LinkToMyEmail">
                         tanaka@tanakamawere.co.zw
                     </MudLink>
                 </p>
@@ -101,8 +101,8 @@
             <div class="h5">Visit my website</div>
             <MudText class="mb-0">
                 Get in touch at
-                <MudLink href="@Constants.LinkToMyWebsite">
-                    @Constants.LinkToMyWebsite
+                <MudLink href="@MedbaseLibrary.Helpers.Constants.LinkToMyWebsite">
+                    @MedbaseLibrary.Helpers.Constants.LinkToMyWebsite
                 </MudLink>
             </MudText>
         </div>
