--- a/_Imports.razor
+++ b/_Imports.razor
@@ -16,6 +16,9 @@
 @using MedbaseComponents.Controls
 @using MedbaseComponents.Pages.User
 @using MedbaseComponents.Pages
+@using MedbaseLibrary.Essays
+@using MedbaseLibrary.Auth
+@using MedbaseLibrary.Notes
 @using PSC.Blazor.Components.MarkdownEditor
 @using PSC.Blazor.Components.MarkdownEditor.EventsArgs
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
