Auth0 is working. Cleaning up other auth options next

--- a/Pages/User/Index.razor
+++ b/Pages/User/Index.razor
@@ -33,6 +33,7 @@
 </HeadContent>
 
 <header>
+    <LoginDisplay />
     <div class="container my-5">
         <MudAlert Severity="Severity.Info" Class="mb-1">
             Join the <MudLink Href="https://whatsapp.com/channel/0029VabQu1o7dmeTtvWXta0V" Typo="Typo.body1">Medbase WhatsApp Channel</MudLink> to get notified of changes and updates to Medbase.
