--- a/_Imports.razor
+++ b/_Imports.razor
@@ -22,3 +22,4 @@
 @using PSC.Blazor.Components.MarkdownEditor
 @using PSC.Blazor.Components.MarkdownEditor.EventsArgs
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
+@using MedbaseBlazor.Pages
