--- a/Routes.razor
+++ b/Routes.razor
@@ -1,9 +1,14 @@
 ﻿<CascadingAuthenticationState>
     <Router AppAssembly="@typeof(Routes).Assembly"
-        AdditionalAssemblies="new[]{typeof(MedbaseComponents.Pages.User.Questions).Assembly, 
-    typeof(MedbaseComponents.Pages.User.Topics).Assembly, 
-    typeof(MedbaseComponents.Pages.User.Notes).Assembly, 
-    typeof(MedbaseComponents.Pages.User.Articles).Assembly}">
+        AdditionalAssemblies="new[]
+        {
+            typeof(MedbaseComponents.Pages.Questions).Assembly, 
+            typeof(MedbaseComponents.Pages.Topics).Assembly, 
+            typeof(MedbaseComponents.Pages.Store.Store).Assembly,
+            typeof(MedbaseComponents.Pages.Essays.Essays).Assembly,
+            typeof(MedbaseComponents.Pages.Articles.Articles).Assembly,
+            typeof(MedbaseComponents.Pages.Notes.Notes).Assembly,
+        }">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(WebLayout)" />
             <FocusOnNavigate RouteData="@routeData" Selector="h1" />
