--- a/_Imports.razor
+++ b/_Imports.razor
@@ -14,10 +14,12 @@
 @using MedbaseLibrary.Models
 @using MedbaseLibrary.Services
 @using MedbaseComponents.Controls
-@using MedbaseComponents.Pages.User
+@using MedbaseComponents.Pages.Store
+@using MedbaseComponents.Pages.Essays
+@using MedbaseComponents.Pages.Articles
+@using MedbaseComponents.Pages.Notes
 @using MedbaseComponents.Pages
 @using MedbaseLibrary.Essays
-@using MedbaseLibrary.Auth
 @using MedbaseLibrary.Notes
 @using PSC.Blazor.Components.MarkdownEditor
 @using PSC.Blazor.Components.MarkdownEditor.EventsArgs
